--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "clean": "node scripts/clean.js",
     "start": "babel-node -- ./index.js",
-    "build": "yarn install && node scripts/build.js",
+    "prebuild": "node scripts/prebuild.js",
+    "build": "yarn install && babel -d \"../build/server\" --ignore node_modules . -s",
+    "postbuild": "node scripts/postbuild.js",
     "test": "jest --passWithNoTests --runInBand --verbose"
   },
   "dependencies": {
