--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,10 @@
     "@babel/preset-env": "^7.8.2",
     "shelljs": "^0.8.3"
   },
+  "resolutions": {
+    "acorn": "^7.1.1",
+    "kind-of": "^6.0.3",
+    "minimist": "^1.2.3"
+  },
   "license": "MIT"
 }
