--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "clean": "node scripts/clean.js",
     "start": "react-scripts start",
-    "prebuild": "node scripts/prebuild.js",
-    "build": "yarn install && react-scripts build",
+    "prebuild": "yarn install && node scripts/prebuild.js",
+    "build": "react-scripts build",
     "postbuild": "node scripts/postbuild.js",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "eject": "react-scripts eject"
@@ -14,16 +14,16 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "shelljs": "^0.8.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "http-proxy-middleware": "^0.20.0",
-    "react-scripts": "3.3.0",
-    "shelljs": "^0.8.3"
+    "http-proxy-middleware": "^0.20.0"
   },
   "resolutions": {
     "acorn": "^7.1.1",
